--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -1,6 +1,6 @@
 # Microsoft Entra ID SPA and API Setup
 
-In the previous post I provided an <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link> for the second code sample. Next we will prove that the current code sample is a portable OAuth implementation by using a different authorization server. This will be [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and will run in the Microsoft Azure cloud.
+The previous post provided an <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link> for the second code sample. Next I port the code sample to [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) and use the same libraries in the SPA and API.
 
 ### Main Objective
 
@@ -8,25 +8,25 @@ The goal of the Entra ID code sample is to match the <Link href='/posts/improved
 
 | Area | Description |
 | ---- | ----------- |
-| <span style={{color:'green'}}>**Entra ID Integration**</span> | We will integrate our SPA and API into Entra ID, and describe the authorization server settings |
-| <span style={{color:'green'}}>**Consistent Architecture**</span> | We will use the same open source standards-based libraries and the same application code |
-| <span style={{color:'green'}}>**Vendor Differences**</span> | If the vendor forces us to write any non-standard code, the impact will be minimized |
+| <span style={{color:'green'}}>**Authorization Server Integration**</span> | The SPA and API integrate with Entra ID and this post explains the authorization server settings. |
+| <span style={{color:'green'}}>**Same Security Libraries**</span> | I use the same open source standards-based libraries and the same main application code. |
+| <span style={{color:'green'}}>**Minor Vendor Differences**</span> | I minimize the impact of any vendor-specific code required by either AWS Cognito or Microsoft Entra ID. |
 
 ### Components
 
-Our components will have the same shape as previously, to match the below standard architecture:
+The components remain those that I used with this blog's default authorization server.
 
 ![components](/images/190/components.jpg)
 
 ### SPAs in 2021
 
-<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in JavaScript. This is no longer recommended, and your production apps should instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
+<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in JavaScript. In 2021 the best practice is to upgrade to a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
 
-The traditional SPA flow remains useful for representing a pure SPA architecture, and learning about Entra ID integration. This blog’s <Link href='/posts/final-spa-overview'>Final SPA</Link> provides a BFF based solution, but requires a more complex flow.
+The traditional SPA flow remains useful to represent a pure SPA architecture and to learn about Entra ID integration. This blog’s <Link href='/posts/final-spa-overview'>Final SPA</Link> provides a BFF based solution, but requires a more complex flow.
 
 ### Code Download
 
-The code for our SPA and API can be downloaded from here:
+Clone the project with the below command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.websample.azure
@@ -36,14 +36,14 @@ git clone https://github.com/gary-archer/oauth.websample.azure
 
 ### Local Computer Hosting
 
-In this post I will describe some setup details for the Entra ID authorization server I use for development. The following components will be run in an end-to-end flow:
+In this post I explain some setup details for the Entra ID authorization server. The following components run at these URLs in the end-to-end flow:
 
 | Component | URL |
 | --------- | --- |
 | <span style={{color:'green'}}>**Secured API**</span> | *https://api.authsamples-dev.com/api* |
 | <span style={{color:'green'}}>**Secured SPA**</span> | *https://www.authsamples-dev.com/spa* |
 
-In order to get a working system, you would need to follow the steps in this post for your own Microsoft account, then reconfigure the apps. The configuration is a little complex though, due to my requirement to issue custom claims to access tokens.
+To get a working system you would need to follow the steps in this post for your own Microsoft account and then reconfigure the apps. The configuration is a little complex though, due to my requirement to issue custom claims to access tokens.
 
 ### Step 1. Azure Sign Up
 
@@ -53,11 +53,11 @@ I used the [Azure Free Trial](https://azure.microsoft.com/en-gb/free/) offer and
 
 ### Step 2. Log in to the Entra ID Portal
 
-After email confirmation I visited https://entra.microsoft.com and could manage a directory whose domain name is based on the email with which I registered:
+After email confirmation I visited [https://entra.microsoft.com](https://entra.microsoft.com) and could manage a directory whose domain name is based on by registration email:
 
 ![azure directory](/images/190/azure-directory.jpg)
 
-Note the *Tenant ID*, since the *Authorization Server Base URL* will be of the following form:
+Note the *Tenant ID*, since the *Authorization Server Base URL* has the following form:
 
 - *https://login.microsoftonline.com/[tenantid]/v2.0*
 
@@ -67,11 +67,11 @@ The *OpenID Connect Discovery Endpoint* for my developer account is therefore at
 
 ### Step 3. Configure Test User Accounts
 
-Next I navigated to Users and created the two users for testing from the previous code sample:
+Next I navigated to *Users* and created the two users for testing to match those in the previous code sample:
 
 ![test accounts](/images/190/test-accounts.jpg)
 
-The *Guest User* and *Guest Admin* accounts I created have the following login names based on my domain:
+I created the *Guest User* and *Guest Admin* accounts with the following login names based on my domain:
 
 - *guestuser@[mytenant].onmicrosoft.com*
 - *guestadmin`@`[mytenant].onmicrosoft.com*
@@ -80,34 +80,32 @@ I assigned each user *First name* and *Last name* fields. The *Object ID* field 
 
 ![built in user attributes](/images/190/built-in-user-attributes.jpg)
 
-I then did an initial login for each user with the following steps in a new Incognito browser window, to configure the user for MFA, as required by Entra ID. I used the Google authenticator app on my mobile device.
+I then did an initial login for each user with the following steps in a new Incognito browser window, to configure the user for MFA, as Entra ID requires. I used the Google authenticator app on my mobile device.
 
-- In the Entra ID Portal, reset the user’s password to get a temporary one
-- Login to the SPA and reset the password when prompted
-- There follows a prompt to create an entry in an authenticator app
-- The browser login form then presents a QR code
-- On my mobile device I scanned the QR code in my authenticator app
-- In the browser I then entered the authenticator app’s one-time-code
+- In the Entra ID Portal, reset the user’s password to get a temporary one.
+- Login to the SPA and reset the password when prompted.
+- There follows a prompt to create an entry in an authenticator app.
+- The browser login form then presents a QR code.
+- On my mobile device I scanned the QR code in my authenticator app.
+- In the browser I then entered the authenticator app’s one-time-code.
 
 On all subsequent logins I only enter the username and password, until I am again prompted for a new one-time-code from the authenticator app.
 
 ### Step 4. Register an OAuth Client for the API
 
-By default, APIs are not OAuth clients. Microsoft have some rules around data protection that relate to the [RFC 8707](https://datatracker.ietf.org/doc/html/rfc8707) proposed standard, which requires an API registration.
-
-First I added a client called BasicAPI, without selecting a platform. I use this client to represent a logical collection of one or more related APIs. Access tokens issued later will use the below *Client ID* in their *audience* claim:
+By default, APIs are not OAuth clients. Microsoft have some rules around data protection that relate to the [RFC 8707](https://datatracker.ietf.org/doc/html/rfc8707) proposed standard, which requires an API registration. I added a client called BasicAPI, without selecting a platform. I use this client to represent a logical collection of one or more related APIs. Access tokens issued later will use the below *Client ID* in their *audience* claim:
 
 ![api client](/images/190/api-client.jpg)
 
-I then switched to the *Owners* tab and added my personal Microsoft user account as the owner of the application registration. A client ID was then generated:
+I then switched to the *Owners* tab and added my personal Microsoft user account as the owner of the application registration:
 
 ![api owner](/images/190/api-owner.jpg)
 
-The API client registration is used to define scopes. I navigated to *Expose an API* and created a custom scope called *investments* as shown here:
+The API client registration define scopes. I navigated to *Expose an API* and created a custom scope called *investments*:
 
 ![api custom scope](/images/190/api-custom-scope.jpg)
 
-The API acts as a client to the Microsoft Graph endpoint, to get user info. Under *API Permissions*, I selected *Add a permission / Microsoft Graph / Delegated permissions* and added the *openid* and *profile* built-in OpenID Connect scopes. I also selected the *Grant Admin Consent for Default Directory* option:
+The API acts as a client to the Microsoft Graph endpoint, to get userinfo. Under *API Permissions*, I selected *Add a permission / Microsoft Graph / Delegated permissions* and added the *openid* and *profile* built-in OpenID Connect scopes. I also selected the *Grant Admin Consent for Default Directory* option:
 
 ![api permissions](/images/190/api-permissions.jpg)
 
@@ -121,7 +119,7 @@ Finally, I edited the manifest data to use the latest access token version:
 
 ### Step 5. Register an OAuth Client for the SPA
 
-Under *Applications / App Registrations*, I selected *New Registration* and added a client called BasicSPA, selecting the *Single Page Application* platform type. This is also assigned a generated client ID.
+Under *Applications / App Registrations*, I selected *New Registration* and added a client called BasicSPA, selecting the *Single Page Application* platform type.
 
 ![spa client](/images/190/spa-client.jpg?v=20240816)
 
@@ -131,28 +129,26 @@ I made my personal account the owner of this application registration and again 
 
 ### Step 6. Populate Custom User Attributes
 
-Next I defined two custom attributes to store against user accounts in the identity data, as described in the earlier <Link href='/posts/user-data'>User Data</Link> blog post. The values of these attributes, once populated against user accounts, will be included in access tokens issued to the SPA client:
+Next I defined two custom attributes to store against user accounts in the identity data, to match the setup from the <Link href='/posts/user-data'>User Data</Link> post. Once populated against user accounts, these attributes are included in access tokens issued to the SPA client:
 
 | User Attribute | Description |
 | -------------- | ----------- |
-| <span style={{color:'green'}}>**manager_id**</span> | A business user identity that is easy for the API to work with when it receives access tokens |
-| <span style={{color:'green'}}>**role**</span> | A user role that the API will use in its authorization logic |
+| <span style={{color:'green'}}>**manager_id**</span> | A business user identity that the API receives in access tokens. |
+| <span style={{color:'green'}}>**role**</span> | A user role that the API uses in its authorization logic. |
 
-To add these fields to the user accounts schema I navigated to the *Cross-Tenant Synchronization* screen, and added them as shown:
+I navigated to the *Cross-Tenant Synchronization* screen and added these fields to the user accounts schema:
 
 ![custom user attributes](/images/190/custom-user-attributes.jpg)
 
-Populating these values for my two test user accounts was long winded. First I created a new client called UserAdmin without setting a platform. I then generated a client secret. Again I made my Microsoft account the owner and updated to the access token version 2 format. In total the following registrations were created:
+Populating these values for my two test user accounts was a little cryptic. First I created a new client called *UserAdmin* without setting a platform. I then generated a client secret. Again I made my Microsoft account the owner and updated to the access token version 2 format. In total I created the following registrations:
 
 ![app registrations](/images/190/app-registrations.jpg)
 
-The extensions app is automatically created and used internally by Entra ID to store custom user attributes. The UserAdmin app administers all user accounts using the client credentials flow. Therefore I granted it *User.ReadWriteAll* application permissions (not delegated permissions).
-
-To populate the values for my two test user accounts I had to write some client code to call the Graph API. I did this as a bash script that uses the jq tool. The code is available in this script in the code sample repository:
+Entra ID automatically creates the extensions app ands store custom user attributes there. The *UserAdmin* app administers all user accounts using the client credentials flow. Therefore I granted it *User.ReadWriteAll* application permissions (not delegated permissions). To populate the values for my two test user accounts I had to write some client code to call the Graph API. I did this as a bash script that uses the [jq](https://github.com/jqlang/jq) tool. The code sample repository contains the script:
 
 - [utils/populate_custom_user_attributes.sh](https://github.com/gary-archer/oauth.websample.azure/blob/master/utils/populate-custom-user-attributes.sh)
 
-My two custom user attributes are stored as extension attributes and have these full technical names. The middle part is the client ID of the extensions app registration with hyphens removed:
+My two custom user attributes are extension attributes with the following full technical names. The middle part is the *client_id* of the extensions app registration with hyphens removed:
 
 - extension_32ee1b779fea4ee2be2dcaf30f23d83a_manager_id
 - extension_32ee1b779fea4ee2be2dcaf30f23d83a_role
@@ -163,7 +159,7 @@ To customize access tokens you edit the API client registration, starting by sel
 
 ![edit api client](/images/190/edit-api-client.jpg)
 
-This makes a Single Sign On tab available from which *Attributes & Claims* can be selected. Here the custom claims were added, using a source location of *Directory Schema Extension*. I used a *custom_* prefix to avoid conflicts with the built-in role claim:
+This makes a *Single Sign On* tab available from which you can select *Attributes & Claims*. Here I added the custom claims using a source location of *Directory Schema Extension*. I used a *custom_* prefix to avoid conflicts with the built-in *role* claim:
 
 ![directory schema extensions](/images/190/directory-schema-extensions.jpg)
 
@@ -204,7 +200,7 @@ For the SPA update both the *Tenant ID* and the SPA’s *Client ID* to your own 
 
 ### Step 10. Update API Configuration
 
-For the API configuration, replace the *Tenant ID* with your own value, and also update the *Audience* and *Client ID* values with those of the API:
+For the API configuration, replace the *Tenant ID* with your own value, and also update the *Audience* and *Client ID* values with those for the API:
 
 ```json
 {
@@ -247,7 +243,7 @@ Update the hosts file on your computer to include this blog’s local developmen
 
 ### Step 12. Build the Code
 
-Next run the following script, which will download some OpenSSL generated certificates, then build the SPA and API code:
+Next run the following script, which downloads some  OpenSSL generated certificates, then build the SPA and API code:
 
 ```bash
 ./build.sh
@@ -263,19 +259,19 @@ api/certs/authsamples-dev.ca.crt
 
 ### Step 14. Run the SPA
 
-Next run the following script, to run the API over SSL on port 443, and the default browser will then be opened at *https://www.authsamples-dev.com/spa*. The SPA will then redirect to Microsoft online and you can sign in with one of the test user accounts:
+Next run the following script, to run the API over SSL on port 443. The default browser then runs at *https://www.authsamples-dev.com/spa*. The SPA redirects to Microsoft online and you can sign in with one of the test user accounts:
 
 ```bash
 ./run.sh
 ```
 
-Login completes successfully and we can run the same SPA and API that we originally developed for AWS Cognito. There are some minor OAuth differences but both apps use essentially the same code.
+Login completes successfully and you can run the same SPA and API that was previously run against AWS Cognito. There are some minor OAuth differences but both apps use essentially the same code.
 
 ### Where Are We?
 
-I have provided a working Entra ID setup and in the next post I will explain further details about the SPA and API OAuth end-to-end flow.
+I have provided a working Entra ID setup and in the next post I explain further details about the SPA and API OAuth end-to-end flow.
 
 ### Next
 
-- The next post walks through the <Link href='/posts/azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- I  walk through the <Link href='/posts/azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
